; ModuleID = '/home/carl/AnghaBench/sway/sway/tree/extr_container.c_surface_send_leave_iterator.c'
source_filename = "/home/carl/AnghaBench/sway/sway/tree/extr_container.c_surface_send_leave_iterator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wlr_surface = type { i32 }
%struct.wlr_output = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wlr_surface*, i32, i32, i8*)* @surface_send_leave_iterator to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @surface_send_leave_iterator(%struct.wlr_surface* %0, i32 %1, i32 %2, i8* %3) #0 {
  %5 = alloca %struct.wlr_surface*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca %struct.wlr_output*, align 8
  store %struct.wlr_surface* %0, %struct.wlr_surface** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i8* %3, i8** %8, align 8
  %10 = load i8*, i8** %8, align 8
  %11 = bitcast i8* %10 to %struct.wlr_output*
  store %struct.wlr_output* %11, %struct.wlr_output** %9, align 8
  %12 = load %struct.wlr_surface*, %struct.wlr_surface** %5, align 8
  %13 = load %struct.wlr_output*, %struct.wlr_output** %9, align 8
  %14 = call i32 @wlr_surface_send_leave(%struct.wlr_surface* %12, %struct.wlr_output* %13)
  ret void
}

declare dso_local i32 @wlr_surface_send_leave(%struct.wlr_surface*, %struct.wlr_output*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
